# zod

./: .gitignore  Cargo.toml  README.md  build.rs  out.rs  progress.md
core/: Cargo.toml  tmp.ts
core/examples/: expanded.rs  generate.rs
core/src/: build_ins.rs  export.rs  formatter.rs  lib.rs  num.rs
core/src/ast/: build_ins.rs  compiler.rs  docs.rs  export.rs  fields.rs  formatter.rs  generics.rs  literal.rs  mod.rs  node.rs  path.rs  rpc.rs  schema.rs  struct.rs  type.rs  utils.rs
core/src/ast.back/: fields.rs  generics.rs  literal.rs  mod.rs
core/src/ast/schema/: discriminated_union.rs  fields.rs  mod.rs  newtype.rs  object.rs  raw.rs  ref.rs  tuple.rs  union.rs
core/src/derive_internals/namespace/: mod.rs
core/src/derive_internals/zod/: ast.rs  attrs.rs  custom_suffix.rs  data.rs  enum.rs  fields.rs  generics.rs  mod.rs  struct.rs  variant.rs
core/src/formatter/: fields.rs  generics.rs  mod.rs  struct.rs  type.rs
core/src/rpc/: codegen.rs  error.rs  mod.rs  server.rs
core/src/rpc/codegen/: mod.rs
core/src/types/: external.rs  macros.rs  mod.rs  num.rs
core/src/utils/: mod.rs
core/src/z/: bool.rs  literal.rs  union.rs
derive/: Cargo.toml
derive/src/: args.rs  backend.rs  config.rs  config.rs.old  docs.rs  enum.rs  error.rs  field.rs  impl_inventory.rs  impl_namespace.rs  impl_struct.rs  lib.rs  namespace.rs  node.rs  rpc.rs  struct.rs  test_utils.rs  type.rs  utils.rs
derive/src/backend/: mod.rs
derive/src/config/: container.rs  field.rs  mod.rs
derive/src/enum/: mod.rs  variant.rs
derive/src/impl_enum/: field.rs  mod.rs
derive/src/namespace/: mod.rs
derive/src/rpc/: args.rs  backend_impl.rs  impl_rpc.rs  mod.rs  rpc_impl.rs
derive/src/struct/: mod.rs  schema.rs
derive/src/zod_type/: field.rs  mod.rs
derive/src/zod_type/config/: container.rs  field.rs  mod.rs
derive/src/zod_type/enum/: mod.rs  variant.rs
derive/tests/ui/: fail_non_default_after_default_tuple_field.rs  fail_non_default_after_default_tuple_field.stderr  fail_type_not_implementing_IoType.rs  fail_type_not_implementing_IoType.stderr  fail_unit_struct.rs
examples/axum/: Cargo.toml  api.rs  example_stream_req.json  main.rs  output.ts  testout  websocat
examples/axum-websocket/: Cargo.toml  test.ts
examples/axum-websocket/src/: api.rs  main.rs
examples/axum-websocket/web/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
examples/axum/client/: package-lock.json
examples/axum/example_requests/: stream.json
examples/axum/src/: api.rs  api.ts  generated.rs  main.rs
examples/axum/web/: .gitignore  package-lock.json  package.json
examples/axum/web-old/: index.html  package.json
examples/expanded/: Cargo.toml
examples/expanded/src/: generated.rs  main.rs  remotely_lib.rs
examples/raw/: Cargo.toml  generated.rs  main.rs
examples/raw/src/: generated.rs  main.rs
experiments/: Cargo.toml
experiments/derive/: Cargo.toml
experiments/derive/src/: lib.rs
experiments/derive/tests/: .gitignore  debug.rs  enum.rs  generics.rs  manual_impl.rs  mixed.rs  rename.rs  struct.rs  tuple.rs  watch_expanded.sh
experiments/src/: const_str.rs  export.rs  lib.backup.rs  lib.rs  test_utils.rs  types.rs  utils.rs
experiments/src/build_ins/: mod.rs
experiments/src/derive_internals/: enum.rs  fields.rs  generics.rs  mod.rs  struct.rs  struct_impl.rs
experiments/src/types/: bool.rs  discriminated_union.rs  export.rs  literal.rs  mod.rs  number.rs  object.rs  string.rs  tuple.rs  type.rs  union.rs
experiments/src/utils/: const_str.rs  mod.rs
experiments/src/z/: bool.rs  discriminated_union.rs  export.rs  literal.rs  mod.rs  number.rs  object.rs  string.rs  tuple.rs  type.rs  union.rs
experiments/tests/: impl.rs  trait_system_playground.rs
integrations/axum/: Cargo.toml
integrations/axum/src/: lib.rs
remotely/: Cargo.toml
remotely/src/: lib.rs
remotely/src/clients/: mod.rs
remotely/src/servers/: axum.rs  axum_server.rs  mod.rs  proxy.rs
remotely/tests/: .enum.rs.rustfmt  doc.rs  enum.rs  enum_adj_struct.rs  enum_adj_struct_multiple_fields.rs  enum_adj_struct_multiple_fields_single.rs  enum_adj_tuple.rs  enum_adj_tuple_multiple_fields.rs  enum_adj_tuple_multiple_fields_single_variant.rs  enum_adj_tuple_single_variant.rs  enum_adj_unit.rs  enum_adj_unit_single_variant.rs  enum_default.rs  enum_extern_struct.rs  enum_extern_struct_multiple_fields.rs  enum_extern_struct_multiple_fields_single.rs  enum_extern_tuple.rs  enum_extern_tuple_multiple_fields.rs  enum_extern_tuple_multiple_fields_single_variant.rs  enum_extern_tuple_single_variant.rs  enum_extern_unit.rs  enum_extern_unit_single_variant.rs  enum_intern_struct.rs  enum_intern_struct_multiple_fields.rs  enum_intern_struct_multiple_fields_single.rs  enum_intern_unit.rs  enum_intern_unit_single_variant.rs  enum_rename.rs  enum_rename_all.rs  enum_rename_fields.rs  enum_skip.rs  enum_untagged_struct.rs  enum_untagged_struct_multiple_fields.rs  enum_untagged_struct_multiple_fields_single.rs  enum_untagged_tuple.rs  enum_untagged_tuple_multiple_fields.rs  enum_untagged_tuple_multiple_fields_single_variant.rs  enum_untagged_tuple_single_variant.rs  enum_untagged_unit.rs  enum_untagged_unit_single_variant.rs  (+12 more)
zod/: Cargo.toml
zod-rpc/: Cargo.toml
zod-rpc/core/: Cargo.toml
zod-rpc/core/src/: error.rs  lib.rs  server.rs
zod-rpc/derive/: Cargo.toml
zod-rpc/derive/src/: args.rs  backend_impl.rs  lib.rs  rpc_impl.rs
zod-rpc/src/: lib.rs
zod-rpc/src/clients/: mod.rs
zod-rpc/src/servers/: axum.rs  proxy.rs
zod/core/: Cargo.toml
zod/core/src/: build_ins.rs  docs.rs  lib.rs
zod/derive/: Cargo.toml
zod/derive/src/: args.rs  impl_inventory.rs  impl_namespace.rs  impl_struct.rs  lib.rs
zod/src/: lib.rs
zod/src/rpc/: mod.rs
zod/tests/: doc.rs  enum.rs  enum_default.rs  enum_rename.rs  enum_rename_all.rs  enum_rename_fields.rs  enum_skip.rs  struct_default.rs  struct_flattening.rs  struct_new_type.rs  struct_rename.rs  struct_rename_all.rs  struct_rename_fields.rs  struct_skip.rs  struct_transparent.rs  struct_tuple.rs  test_utils.rs
(+197 files in other folders)
