[package]
name = "zod"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Rust integraions with the `zod` typescript library."
authors = ["Nicolai Unrein<info@auxcontrol.io>"]
documentation = "https://docs.rs/zod"
repository = "https://github.com/nicolaiunrein/zod"
license = "MIT OR Apache-2.0"

[workspace]
package.edition = "2021"
package.description = "Rust integraions with the `zod` typescript library."
package.authors = ["Nicolai Unrein<info@auxcontrol.io>"]
package.documentation = "https://docs.rs/zod"
package.repository = "https://github.com/nicolaiunrein/zod"
package.license = "MIT OR Apache-2.0"
members = [
    "core",
    "derive",
]

[dependencies]

# remember to update build-dependencies as well
zod-derive = { path = "./derive", version = "0.1.0" } 
zod-core = { path = "./core", version = "0.1.0" }

# =========================== inventory dependencies ===========================

inventory = { version = "0.3.3", optional = true }

# ============================== rpc dependencies ==============================

async-trait = { version = "0.1.64", optional = true }
axum = { version = "0.6.7", features = ["ws", "headers"], optional = true }
futures = { version = "0.3.26", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.92", optional = true }
thiserror = { version = "1.0.38", optional = true }
tokio = { version = "1.25.0",  optional = true }
tracing = { version = "0.1.37", optional = true }


[dev-dependencies]
paste = "1.0.11"
pretty_assertions = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
trybuild = { version = "1.0.77", features = ["diff"] }

[build-dependencies]
zod-core = { path = "./core", version = "0.1.0" }
zod-derive = { path = "./derive", version = "0.1.0" }

[features]
default = ["rpc"]
rpc = ["async-trait", "axum", "futures", "inventory", "pin-project-lite", "serde", "serde_json", "thiserror", "tokio", "tracing"]
