[package]
name = "zod"
version = "0.1.0"
edition = "2021"
description = "Rust integraions with the `zod` typescript library."
authors = ["Nicolai Unrein<info@auxcontrol.io>"]
documentation = "https://docs.rs/zod"
repository = "https://github.com/nicolaiunrein/zod"
license = "MIT OR Apache-2.0"

[workspace]
package.edition = "2021"
package.description = "Rust integraions with the `zod` typescript library."
package.authors = ["Nicolai Unrein<info@auxcontrol.io>"]
package.documentation = "https://docs.rs/zod"
package.repository = "https://github.com/nicolaiunrein/zod"
package.license = "MIT OR Apache-2.0"
members = [
    "core",
    "derive",
    "integrations/axum",
    "examples/axum-websocket",
    # todo remove
    "experiments" 
]

[dependencies]

zod-derive = { path = "./derive", version = "0.1.0" } 
zod-core = { path = "./core", version = "0.1.0" }
async-trait = { version = "0.1.64" }
futures = { version = "0.3.26" }
pin-project-lite = { version = "0.2.9" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.92" }
thiserror = { version = "1.0.38" }
tokio = { version = "1.25.0" }
tracing = { version = "0.1.37" }
const_format = "0.2.30"

[dev-dependencies]
const_format = "0.2.30"
paste = "1.0.11"
pretty_assertions = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
trybuild = { version = "1.0.77", features = ["diff"] }
unindent = "0.2.1"

[features]
smol_str = ["zod-core/smol_str"]
ordered-float = ["zod-core/ordered-float"]
