[package]
name = "zod-core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# =========================== inventory dependencies ===========================
inventory = { version = "0.3.3", package = "inventory", optional = true }

# ============================== rpc dependencies ==============================
async-trait = { version = "0.1.64", optional = true }
serde_json = { version = "1.0.92", optional = true }
futures = { version = "0.3.26", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
thiserror = { version = "1.0.38", optional = true }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"], optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
smol_str = { version = "0.1", optional = true }
ordered-float = { version = "3.4", optional = true } 

[dev-dependencies]
serde_json = "1.0.93"

[features]
rpc = ["dep:async-trait", "dep:serde_json", "dep:futures", "dep:pin-project-lite", "dep:thiserror", "dep:tokio", "dep:serde"]
default = ["inventory", "rpc"]

