[package]
name = "zod-core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
document-features = "0.2.7"

#! ### Optional dependencies

## Enable this feature to implement [Node](Node) for [NotNan](https://docs.rs/ordered-float/latest/ordered_float/struct.NotNan.html)
ordered-float = { version = "3.4", optional = true } 

## Enable this feature to implement [Node](Node) for [SmolStr](https://docs.rs/smol_str/latest/smol_str/struct.SmolStr.html)
smol_str = { version = "0.1", optional = true }


# ============================== rpc dependencies ==============================
async-trait = { version = "0.1.64", optional = true }
serde_json = { version = "1.0.92", optional = true }
futures = { version = "0.3.26", optional = true }
thiserror = { version = "1.0.38", optional = true }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"], optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }


[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0.93"

[features]
default = ["rpc", "ordered-float"]

#! # Features
## This feature enables rpc clien/server code
rpc = ["dep:async-trait", "dep:serde_json", "dep:futures", "dep:thiserror", "dep:tokio", "dep:serde"]


