[package]
name = "zod-derive"
version = "0.1.0"
edition.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc_macro = true

[dependencies]
darling = "0.14.3"
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde_derive_internals = "0.26.0"
syn = { version = "1.0.107", features = ["derive", "full", "visit"] }

[features]
default = ["rpc"]
rpc = []

[dev-dependencies]
pretty_assertions = "1.3.0"

