[package]
name = "zod-derive"
version = "0.1.0"
edition.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
proc_macro = true

[dependencies]
darling = "0.14.3"
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.27"
syn = "2.0.16"
thiserror = "1.0.40"
zod-core = { path = "../core" }

[features]
default = ["rpc"]
rpc = []

[dev-dependencies]
pretty_assertions = "1.3.0"
prettyplease = "0.2.6"
serde = { version = "1.0.163", features = ["derive"] }
trybuild = { version = "1.0.80", features = ["diff"] }


