[package]
name = "experiments"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
pretty_assertions = "1.3.0"
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "2.0.16"
typed-builder = "0.14.0"

[dev-dependencies]
prettyplease = "0.2.5"
