[package]
name = "zod_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
colored = "2.0.0"
darling = "0.20.1"
once_cell = "1.17.1"
paste = "1.0.12"
pretty_assertions = "1.3.0"
proc-macro-crate = "1.3.1"
proc-macro2 = { version = "1.0.58", features = ["span-locations"] }
quote = "1.0.27"
serde_derive_internals = "0.28.0"
syn = { version = "2.0.16", features = ["extra-traits", "visit-mut", "visit"] }
typed-builder = "0.14.0"
typed_str = { path = "../../typed_str"}

[dev-dependencies]
prettyplease = "0.2.5"
