[package]
name = "remotely"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"

remotely-core = { path = "../remotely-core" }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.26"
hyper = "0.14.24"
tracing = "0.1.37"
axum = { version = "0.6.7", features = ["ws", "headers"] }
thiserror = "1.0.38"
pin-project-lite = "0.2.9"
