[package]
name = "zod-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"

zod-rpc-core = { path = "./core" }
zod-core = { path = "../zod/core" }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.26"
hyper = "0.14.24"
tracing = "0.1.37"
axum = { version = "0.6.7", features = ["ws", "headers"] }
thiserror = "1.0.38"
pin-project-lite = "0.2.9"
pretty_assertions = "1.3.0"

[dev-dependencies]
paste = "1.0.11"
serde = { version = "1.0.152", features = ["derive"] }
trybuild = { version = "1.0.77", features = ["diff"] }
