[package]
name = "zod"
version = "0.1.0"
edition = "2021"

[dependencies]
zod-derive = { path = "./derive" }
zod-core = { path = "./core" }
zod-rpc = { path = "../zod-rpc" }
inventory = "0.3.3"


[dev-dependencies]
paste = "1.0.11"
pretty_assertions = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
trybuild = { version = "1.0.77", features = ["diff"] }
