[package]
name = "zod"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
zod-derive = { path = "./derive" }
zod-core = { path = "./core" }
inventory = { version = "0.3.3", optional = true }

# rpc
async-trait = "0.1.64"
axum = { version = "0.6.7", features = ["ws", "headers"] }
futures = "0.3.26"
hyper = "0.14.24"
pin-project-lite = "0.2.9"
pretty_assertions = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
zod-rpc-core = { path = "../zod-rpc/core" }
zod-rpc-derive = { path = "../zod-rpc/derive" }


[dev-dependencies]
paste = "1.0.11"
pretty_assertions = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
trybuild = { version = "1.0.77", features = ["diff"] }

[build-dependencies]
zod-core = { path = "./core" }
zod-derive = { path = "./derive" }

[features]
default = ["rpc"]
rpc = ["inventory"]
