[package]
name = "expanded"
version = "0.1.0"
edition = "2021"

[dependencies]
zod = { path = "../../zod" }
axum = { version = "0.6.7", features = ["ws"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
futures = "0.3.26"
