[package]
name = "expanded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
inventory = "0.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
ts-rs = "6.2.1"
typetag = "0.2.5"
remotely = { path = "../../remotely" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
