[package]
name = "zod-rpc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
zod-core = { path = "../../zod/core" }
async-trait = "0.1.64"
inventory = "0.3.3"
serde_json = "1.0.92"
futures = "0.3.26"
pin-project-lite = "0.2.9"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.152", features = ["derive"] }
