[package]
name = "zod-core"
version = "0.1.0"
edition = "2021"

[dependencies]
inventory = { version = "0.3.3", package = "inventory", optional = true }

# rpc
async-trait = { version = "0.1.64", optional = true }
serde_json = { version = "1.0.92", optional = true }
futures = { version = "0.3.26", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
thiserror = { version = "1.0.38", optional = true }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"], optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.93"

[features]
rpc = ["async-trait", "serde_json", "futures", "pin-project-lite", "thiserror", "tokio", "serde"]
default = ["inventory", "rpc"]

